[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/temp/4096-2304-max.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/menu/botao_jogar.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/menu/botao_sobre.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/menu/ceu_limpo-09.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/menu/sol.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/menu/chão-10.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/menu/estrutura-10.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/menu/título.png" type="Texture" id=10]
[ext_resource path="res://Assets/Fonts/Font.tres" type="DynamicFont" id=11]
[ext_resource path="res://Assets/Sprites/menu/palavra_de.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/menu/pilar_frente.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/menu/palavra_festa.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/menu/palavra_a.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/menu/palavra_baco.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/menu/botão_definições.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/menu/rio2.png" type="Texture" id=18]

[sub_resource type="Animation" id=1]
resource_name = "sun"
length = 120.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -66.065, -0.25, 0, 0.25, 0, 3998.27, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 119.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1517.97, -0.25, 0, 0.25, 0, 1517.97, -56.1144, -3338.87, 3.76341, -813.491 ),
"times": PoolRealArray( -0.4, 119.6 )
}

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("A:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 6.0, 0.0, -5.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FESTA:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 1.4, 1.9, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2.0, 3.0, 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DE:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.5, 0.8, 1.1, 1.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2.0, 0.0, 2.0, 0.0, 2.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BACO:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.8, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0.0, -2.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Menu" type="Node2D"]
position = Vector2( -66.065, 1499.19 )
script = ExtResource( 1 )

[node name="bg" type="Node2D" parent="."]
position = Vector2( 62.4842, -1504.04 )
__meta__ = {
"_edit_lock_": true
}

[node name="sky" type="Sprite" parent="bg"]
position = Vector2( 4059.81, 539.173 )
scale = Vector2( 1, 0.241 )
texture = ExtResource( 5 )

[node name="sol" type="Sprite" parent="bg"]
position = Vector2( -66.065, 1494.37 )
scale = Vector2( 0.212717, 0.212717 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="bg/sol"]
anims/sun = SubResource( 1 )

[node name="water" type="Sprite" parent="bg"]
position = Vector2( 968.721, 1072.25 )
texture = ExtResource( 18 )

[node name="floor" type="Sprite" parent="bg"]
position = Vector2( 3978.43, 1037.79 )
scale = Vector2( 1, 0.30907 )
texture = ExtResource( 7 )

[node name="balc_1" type="Sprite" parent="bg"]
position = Vector2( 1462.51, 632.249 )
scale = Vector2( 0.242416, 0.242415 )
texture = ExtResource( 9 )

[node name="poste" type="Sprite" parent="bg"]
position = Vector2( 1630.04, 731.825 )
scale = Vector2( 0.244833, 0.244833 )
z_index = 1
texture = ExtResource( 13 )

[node name="4096-2304-max" type="Sprite" parent="."]
visible = false
position = Vector2( 959.513, 541.114 )
scale = Vector2( 0.467269, 0.466051 )
texture = ExtResource( 2 )

[node name="Title" type="Node2D" parent="."]
position = Vector2( 60.4763, -1504.35 )

[node name="A" type="Sprite" parent="Title"]
position = Vector2( 250.287, 261.942 )
scale = Vector2( 0.254785, 0.254785 )
texture = ExtResource( 15 )

[node name="FESTA" type="Sprite" parent="Title"]
position = Vector2( 625.441, 297.788 )
rotation = 0.0174533
scale = Vector2( 0.254785, 0.254785 )
texture = ExtResource( 14 )

[node name="DE" type="Sprite" parent="Title"]
position = Vector2( 298.052, 465.155 )
rotation = 0.0349066
scale = Vector2( 0.254785, 0.254785 )
texture = ExtResource( 12 )

[node name="BACO" type="Sprite" parent="Title"]
position = Vector2( 697.145, 492.156 )
rotation = -0.0349066
scale = Vector2( 0.254785, 0.254785 )
texture = ExtResource( 16 )

[node name="titulo" type="Sprite" parent="Title"]
visible = false
position = Vector2( 557.776, 383.665 )
scale = Vector2( 0.254785, 0.254785 )
texture = ExtResource( 10 )

[node name="subtitulo" type="RichTextLabel" parent="Title"]
margin_left = 144.0
margin_top = 78.0
margin_right = 1377.0
margin_bottom = 181.0
custom_fonts/normal_font = ExtResource( 11 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "O MUSEU DO TEATRO ROMANO DE LISBOA APRESENTA:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
anims/move = SubResource( 2 )

[node name="Control" type="Node2D" parent="."]
position = Vector2( 253.363, -818.529 )
scale = Vector2( 0.27, 0.27 )

[node name="Button_Play" type="TextureButton" parent="Control"]
margin_left = -236.081
margin_top = -68.7806
margin_right = 896.919
margin_bottom = 475.219
texture_normal = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_About" type="TextureButton" parent="Control"]
margin_left = 1762.98
margin_top = 414.906
margin_right = 2896.98
margin_bottom = 958.906
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Settings" type="TextureButton" parent="Control"]
margin_left = 1548.7
margin_top = -53.1377
margin_right = 2890.7
margin_bottom = 490.862
texture_normal = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 3 )

[connection signal="pressed" from="Control/Button_Play" to="." method="_on_Button_Play_pressed"]
[connection signal="pressed" from="Control/Button_About" to="." method="_on_Button_About_pressed"]
[connection signal="pressed" from="Control/Button_Settings" to="." method="_on_Button_Settings_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
